<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Fragment localisator"
        android:id="@+id/textView2"
        android:layout_gravity="left|top" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.google.android.gms.maps.SupportMapFragment"
        map:cameraTargetLat="45.379401"
        map:cameraTargetLng="-71.929164"
        map:cameraZoom="14"/>

    <!--
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>
    -->
    <ImageView
        android:src="@drawable/marker_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/marker1"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/marker2"
        android:layout_toEndOf="@+id/marker2"
        android:layout_marginBottom="87dp"
        android:layout_x="55dp"
        android:layout_y="158dp" />

    <ImageView
        android:src="@drawable/marker_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/marker2"
        android:layout_below="@+id/marker3"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginRight="57dp"
        android:layout_marginEnd="57dp"
        android:layout_x="242dp"
        android:layout_y="81dp" />

    <ImageView
        android:src="@drawable/marker_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/marker3"
        android:layout_marginTop="84dp"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/marker1"
        android:layout_toEndOf="@+id/marker1"
        android:layout_gravity="right|bottom"
        android:layout_x="218dp"
        android:layout_y="385dp" />

    <TextView
        android:background="@drawable/rounded_back_text"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/marker_name_1"
        android:id="@+id/markerName1"
        android:layout_x="202dp"
        android:layout_y="448dp"
        android:gravity="center" />

    <TextView
        android:background="@drawable/rounded_back_text"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/marker_name_2"
        android:id="@+id/markerName2"
        android:layout_x="225dp"
        android:layout_y="146dp"
        android:gravity="center" />

    <TextView
        android:background="@drawable/rounded_back_text"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/marker_name_3"
        android:id="@+id/markerName3"
        android:layout_x="38dp"
        android:layout_y="228dp"
        android:gravity="center" />

</AbsoluteLayout>
