<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".HomeFragment">

    <!-- LISTE DES MESSAGES -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="left|top"
        android:weightSum="1"
        android:paddingTop="20dp">

    <!-- UN MESSAGE -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" 
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="246dp"
            android:layout_height="75dp"
            android:text="@string/lorem_1"
            android:id="@+id/message1"
            android:layout_gravity="right|bottom"
            android:paddingTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="11:57 SM"
            android:id="@+id/textView"
            android:layout_gravity="right|top" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/people_1"
            android:id="@+id/image_message1"
            android:layout_gravity="left|top" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" 
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="246dp"
            android:layout_height="75dp"
            android:text="@string/lorem_2"
            android:id="@+id/message2"
            android:layout_gravity="right|bottom"
            android:paddingTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="12:13 PM"
            android:id="@+id/textView8"
            android:layout_gravity="right|top" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/people_3"
            android:id="@+id/image_message2"
            android:layout_gravity="left|top" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" 
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="246dp"
            android:layout_height="75dp"
            android:text="@string/lorem_3"
            android:id="@+id/message3"
            android:layout_gravity="right|bottom"
            android:paddingTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="12:17 PM"
            android:id="@+id/textView9"
            android:layout_gravity="right|top" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/people_3"
            android:id="@+id/image_message3"
            android:layout_gravity="left|top" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" 
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="246dp"
            android:layout_height="75dp"
            android:text="@string/lorem_4"
            android:id="@+id/message4"
            android:layout_gravity="right|bottom"
            android:paddingTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="12:48 PM"
            android:id="@+id/textView10"
            android:layout_gravity="right|top" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/people_1"
            android:id="@+id/image_message4"
            android:layout_gravity="left|top" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" 
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="246dp"
            android:layout_height="75dp"
            android:text="@string/lorem_5"
            android:id="@+id/message5"
            android:layout_gravity="right|bottom"
            android:paddingTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="1:03 PM"
            android:id="@+id/textView11"
            android:layout_gravity="right|top" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/people_3"
            android:id="@+id/image_message5"
            android:layout_gravity="left|top" />
    </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_weight="0.45"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="0dp"
            android:background="@color/light_grey"
            android:rowCount="3"
            android:columnCount="4"
            android:gravity="bottom"
            android:paddingBottom="10dp">

            <EditText
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText3"
                android:layout_row="2"
                android:layout_column="1"
                android:inputType="text"
                android:hint="Entrez votre message"
                android:layout_toRightOf="@+id/imageView4"
                android:layout_toLeftOf="@+id/imageView5"
                android:layout_toStartOf="@+id/imageView5" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView4"
                android:src="@drawable/camera"
                android:paddingRight="10dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_alignBottom="@+id/editText3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingLeft="10dp" />

            <ImageView
                android:layout_width="52dp"
                android:layout_height="72dp"
                android:id="@+id/imageView5"
                android:src="@drawable/ic_send"
                android:paddingRight="0dp"
                android:layout_row="2"
                android:layout_column="0"
                android:paddingLeft="0dp"
                android:layout_alignBottom="@+id/editText3"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </FrameLayout>

</FrameLayout>
