<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".FeedFragment">

    <!-- LISTE DES CONVERSATIONS -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="510dp"
        android:layout_gravity="left|top"
        android:weightSum="1"
        android:paddingTop="20dp">

        <!-- UN MESSAGE -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="11:57 SM"
                android:id="@+id/textView"
                android:layout_gravity="right|top" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/people_2"
                android:id="@+id/image_message1"
                android:layout_gravity="left|top" />

            <TextView
                android:layout_width="281dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Dad"
                android:id="@+id/textView5"
                android:layout_gravity="left|top"
                android:paddingLeft="80dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/lorem_1"
                android:id="@+id/message1"
                android:layout_gravity="center_horizontal|bottom"
                android:paddingTop="20dp"
                android:paddingLeft="80dp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="12:17 PM"
                android:id="@+id/textView9"
                android:layout_gravity="right|top" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/people_4"
                android:id="@+id/image_message3"
                android:layout_gravity="left|top" />

            <TextView
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Mark Dearing "
                android:id="@+id/textView6"
                android:layout_gravity="left|top"
                android:paddingLeft="80dp" />


            <ImageButton
                android:layout_width="240dp"
                android:layout_height="150dp"
                android:id="@+id/imageButton"
                android:layout_gravity="right|center_vertical"
                android:background="@drawable/feed_image_1"
                android:clickable="true"
                android:contentDescription="image"
                android:nestedScrollingEnabled="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_3"
                android:id="@+id/message3"
                android:layout_gravity="center_horizontal|bottom"
                android:paddingTop="15dp"
                android:paddingLeft="80dp" />


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="12:48 PM"
                android:id="@+id/textView10"
                android:layout_gravity="right|top" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/people_5"
                android:id="@+id/image_message4"
                android:layout_gravity="left|top" />

            <TextView
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Mom"
                android:id="@+id/textView3"
                android:layout_gravity="left|top"
                android:paddingLeft="80dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/lorem_4"
                android:id="@+id/message4"
                android:layout_gravity="center_horizontal|bottom"
                android:paddingTop="20dp"
                android:paddingLeft="80dp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="246dp"
                android:layout_height="75dp"
                android:text="@string/lorem_5"
                android:id="@+id/message5"
                android:layout_gravity="right|bottom"
                android:paddingTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="1:03 PM"
                android:id="@+id/textView11"
                android:layout_gravity="right|top" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/people_3"
                android:id="@+id/image_message5"
                android:layout_gravity="left|top" />
        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal|bottom"
        android:elevation="2dp"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:paddingLeft="0dp"
            android:background="#00ffffff"
            android:rowCount="3"
            android:columnCount="4"
            android:gravity="bottom">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/camera"
                android:paddingRight="10dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_alignBottom="@+id/editText2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingLeft="10dp" />

            <EditText
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText2"
                android:layout_row="2"
                android:layout_column="1"
                android:inputType="text"
                android:hint="Entrez votre message"
                android:layout_toRightOf="@+id/imageView"
                android:layout_toLeftOf="@+id/imageView3"
                android:layout_toStartOf="@+id/imageView3" />

            <ImageView
                android:layout_width="52dp"
                android:layout_height="72dp"
                android:id="@+id/imageView3"
                android:src="@drawable/ic_send"
                android:paddingRight="0dp"
                android:layout_row="2"
                android:layout_column="0"
                android:paddingLeft="0dp"
                android:layout_alignBottom="@+id/editText2"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </FrameLayout>

</FrameLayout>
